# powerjack

./: .gitignore  Cargo.toml  README.md  entities.vdf  materials.txt  powerjack.xcf
crates/bitbuf/: Cargo.toml
crates/bitbuf/src/: bitreader.rs  lib.rs  reader.rs
crates/bsp/: Cargo.toml
crates/bsp/src/: gamelumps.rs  lib.rs  lumps.rs
crates/demo/: Cargo.toml  README.md
crates/demo/examples/: parse.rs
crates/demo/src/: command.rs  header.rs  lib.rs  stringtables.rs  usercmd.rs
crates/mdl/: Cargo.toml
crates/mdl/src/: lib.rs  mdl.rs  vtx.rs  vvd.rs
crates/viewer/: Cargo.toml
crates/viewer/shaders/: mdl.wgsl  world.wgsl
crates/viewer/src/: args.rs  entities.rs  kv.rs  main.rs  util.rs
crates/viewer/src/fs/: mod.rs  vpk.rs  zip.rs
crates/viewer/src/renderer/: bsp.rs  camera.rs  iad.rs  mod.rs  reloadable_pipeline.rs  vmt.rs  vtf.rs
crates/viewer/src/renderer/features/: bsp.rs  mdl.rs  mod.rs
crates/vpk/: Cargo.toml
crates/vpk/src/: hasher.rs  lib.rs  structs.rs
crates/vtf/: Cargo.toml
crates/vtf/src/: lib.rs
